--- a/introduction.html
+++ b/introduction.html
@@ -443,7 +443,7 @@
 					</div>
 
 					<div>
-						<button type="button" class="btn btn-primary">Submit</button>
+						<button type="button" class="btn btn-primary">Next</button>
 					</div>
 					 
 				</form>
@@ -491,7 +491,7 @@
 					</div>
 
 					<div>
-						<button type="button" class="btn btn-primary">Submit</button>
+						<button type="button" class="btn btn-primary">Next</button>
 					</div>
 					 
 				</form>
