--- a/section6.html
+++ b/section6.html
@@ -470,9 +470,41 @@
                         </div>
                     </div>
 
+                    <div class="form-group">
+                        <label>Muster Point  </label>
+                        <div class="custom-file">
+                            <input type="file" class="custom-file-input" />
+                            <label class="custom-file-label">Choose file</label>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Hazard spotted</label>
+                        <div class="custom-file">
+                            <input type="file" class="custom-file-input" />
+                            <label class="custom-file-label">Choose file</label>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Front of the bank</label>
+                        <div class="custom-file">
+                            <input type="file" class="custom-file-input" />
+                            <label class="custom-file-label">Choose file</label>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Generator area</label>
+                        <div class="custom-file">
+                            <input type="file" class="custom-file-input" />
+                            <label class="custom-file-label">Choose file</label>
+                        </div>
+                    </div>
+
                  
 					<div>
-						<button type="button" class="btn btn-primary">Submit</button>
+						<button type="button" class="btn btn-primary">Preview</button>
 					</div>
 				</form>
                 
