--- a/index.html
+++ b/index.html
@@ -331,13 +331,13 @@
 							<span class="micon bi bi-textarea-resize"></span><span class="mtext">Sections</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="#">Section 1</a></li>
-							<li><a href="#">Section 2</a></li>
-							<li><a href="#">Section 3</a></li>
-							<li><a href="#">Section 4</a></li>
-							<li><a href="#">Section 5</a></li>
-							<li><a href="#">Section 6</a></li>
-							<li><a href="#">Section 7</a></li>
+							<li><a href="section1.html">Section 1</a></li>
+							<li><a href="section2.html">Section 2</a></li>
+							<li><a href="section3.html">Section 3</a></li>
+							<li><a href="section4.html">Section 4</a></li>
+							<li><a href="section5.html">Section 5</a></li>
+							<li><a href="section6.html">Section 6</a></li>
+							<li><a href="preview.html">Preview</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
@@ -345,13 +345,13 @@
 							<span class="micon bi bi-table"></span><span class="mtext">Tables</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="#">Section 1</a></li>
-							<li><a href="#">Section 2</a></li>
-							<li><a href="#">Section 3</a></li>
-							<li><a href="#">Section 4</a></li>
-							<li><a href="#">Section 5</a></li>
-							<li><a href="#">Section 6</a></li>
-							<li><a href="#">Section 7</a></li>
+							<li><a href="section1.html">Section 1</a></li>
+							<li><a href="section2.html">Section 2</a></li>
+							<li><a href="section3.html">Section 3</a></li>
+							<li><a href="section4.html">Section 4</a></li>
+							<li><a href="section5.html">Section 5</a></li>
+							<li><a href="section6.html">Section 6</a></li>
+							<li><a href="preview.html">Preview</a></li>
 						</ul>
 					</li>
 
@@ -360,13 +360,13 @@
 							<span class="micon bi bi-pie-chart"></span><span class="mtext">Charts</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="#">Section 1</a></li>
-							<li><a href="#">Section 2</a></li>
-							<li><a href="#">Section 3</a></li>
-							<li><a href="#">Section 4</a></li>
-							<li><a href="#">Section 5</a></li>
-							<li><a href="#">Section 6</a></li>
-							<li><a href="#">Section 7</a></li>
+							<li><a href="section1.html">Section 1</a></li>
+							<li><a href="section2.html">Section 2</a></li>
+							<li><a href="section3.html">Section 3</a></li>
+							<li><a href="section4.html">Section 4</a></li>
+							<li><a href="section5.html">Section 5</a></li>
+							<li><a href="section6.html">Section 6</a></li>
+							<li><a href="preview.html">Preview</a></li>
 						</ul>
 					</li>
 					<li>
