--- a/section3.html
+++ b/section3.html
@@ -337,7 +337,7 @@
 							<li><a href="section4.html">Section 4</a></li>
 							<li><a href="section5.html">Section 5</a></li>
 							<li><a href="section6.html">Section 6</a></li>
-							<li><a href="section7.html">Section 7</a></li>
+							<li><a href="preview.html">Preview</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
@@ -345,13 +345,13 @@
 							<span class="micon bi bi-table"></span><span class="mtext">Tables</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="sectionTable1.html">Section 1</a></li>
-							<li><a href="sectionTable2.html">Section 2</a></li>
-							<li><a href="sectionTable3.html">Section 3</a></li>
-							<li><a href="sectionTable4.html">Section 4</a></li>
-							<li><a href="sectionTable5.html">Section 5</a></li>
-							<li><a href="sectionTable6.html">Section 6</a></li>
-							<li><a href="sectionTable7.html">Section 7</a></li>
+							<li><a href="section1.html">Section 1</a></li>
+							<li><a href="section2.html">Section 2</a></li>
+							<li><a href="section3.html">Section 3</a></li>
+							<li><a href="section4.html">Section 4</a></li>
+							<li><a href="section5.html">Section 5</a></li>
+							<li><a href="section6.html">Section 6</a></li>
+							<li><a href="preview.html">Preview</a></li>
 						</ul>
 					</li>
 
@@ -360,13 +360,13 @@
 							<span class="micon bi bi-pie-chart"></span><span class="mtext">Charts</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="sectionChart1.html">Section 1</a></li>
-							<li><a href="sectionChart2.html">Section 2</a></li>
-							<li><a href="sectionChart3.html">Section 3</a></li>
-							<li><a href="sectionChart4.html">Section 4</a></li>
-							<li><a href="sectionChart5.html">Section 5</a></li>
-							<li><a href="sectionChart6.html">Section 6</a></li>
-							<li><a href="sectionChart7.html">Section 7</a></li>
+							<li><a href="section1.html">Section 1</a></li>
+							<li><a href="section2.html">Section 2</a></li>
+							<li><a href="section3.html">Section 3</a></li>
+							<li><a href="section4.html">Section 4</a></li>
+							<li><a href="section5.html">Section 5</a></li>
+							<li><a href="section6.html">Section 6</a></li>
+							<li><a href="preview.html">Preview</a></li>
 						</ul>
 					</li>
 					
