--- a/introduction.html
+++ b/introduction.html
@@ -382,8 +382,32 @@
 						<label>Who is designated to handle Health, Safety, and Environment in the branch?  </label>
 						<input class="form-control" type="text" placeholder="" />
 					</div>
+
 					<div class="form-group">
 						<label>How many HSE personnel on ground?  </label>
+						<input class="form-control" value="" type="text" />
+					</div>
+
+					<div class="form-group">
+                        <label>Is the safety policy posted around the facility? </label>
+                        <select class="custom-select2 form-control" name="state" style="width: 100%; height: 38px">
+                                <option value="">Select</option>
+                                <option value="Yes">Yes</option>
+                                <option value="No">No</option>
+                        </select>
+                    </div>
+
+					<div class="form-group">
+                        <label>Are there enough fire extinguishers in the facility?  </label>
+                        <select class="custom-select2 form-control" name="state" style="width: 100%; height: 38px">
+                                <option value="">Select</option>
+                                <option value="Yes">Yes</option>
+                                <option value="No">No</option>
+                        </select>
+                    </div>
+
+					<div class="form-group">
+						<label>What major safety concern does the branch have?  </label>
 						<input class="form-control" value="" type="text" />
 					</div>
 
