--- a/section5.html
+++ b/section5.html
@@ -326,6 +326,8 @@
                                 <option value="Yes">Yes</option>
                                 <option value="No">No</option>
                         </select>
+                        <label>If no, which of the toilets? </label>
+						<input class="form-control" type="text" placeholder="" />
                     </div>
 				
                     <div class="form-group">
@@ -335,6 +337,8 @@
                                 <option value="Yes">Yes</option>
                                 <option value="No">No</option>
                         </select>
+                        <label>if yes, descirbe which sign</label>
+						<input class="form-control" type="text" placeholder="" />
                     </div>
 
                     <div class="form-group">
