--- a/index.html
+++ b/index.html
@@ -249,12 +249,12 @@
 							<span class="micon bi bi-table"></span><span class="mtext">Tables</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="section1.html">Section 1</a></li>
-							<li><a href="section2.html">Section 2</a></li>
-							<li><a href="section3.html">Section 3</a></li>
-							<li><a href="section4.html">Section 4</a></li>
-							<li><a href="section5.html">Section 5</a></li>
-							<li><a href="section6.html">Section 6</a></li>
+							<li><a href="sectionTable1.html">Section 1</a></li>
+							<li><a href="sectionTable2.html">Section 2</a></li>
+							<li><a href="sectionTable3.html">Section 3</a></li>
+							<li><a href="sectionTable4.html">Section 4</a></li>
+							<li><a href="sectionTable5.html">Section 5</a></li>
+							<li><a href="sectionTable6.html">Section 6</a></li>
 						</ul>
 					</li>
 
@@ -263,12 +263,12 @@
 							<span class="micon bi bi-pie-chart"></span><span class="mtext">Charts</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="section1.html">Section 1</a></li>
-							<li><a href="section2.html">Section 2</a></li>
-							<li><a href="section3.html">Section 3</a></li>
-							<li><a href="section4.html">Section 4</a></li>
-							<li><a href="section5.html">Section 5</a></li>
-							<li><a href="section6.html">Section 6</a></li>
+							<li><a href="sectionChart1.html">Section 1</a></li>
+							<li><a href="sectionChart2.html">Section 2</a></li>
+							<li><a href="sectionChart3.html">Section 3</a></li>
+							<li><a href="sectionChart4.html">Section 4</a></li>
+							<li><a href="sectionChart5.html">Section 5</a></li>
+							<li><a href="sectionChart6.html">Section 6</a></li>
 						</ul>
 					</li>
 					<li>
