--- a/introduction.html
+++ b/introduction.html
@@ -232,6 +232,19 @@
 
 					<li class="dropdown">
 						<a href="javascript:;" class="dropdown-toggle">
+							<span class="micon bi bi-textarea-resize"></span><span class="mtext">Sections</span>
+						</a>
+						<ul class="submenu">
+							<li><a href="section1.html">Section 1</a></li>
+							<li><a href="section2.html">Section 2</a></li>
+							<li><a href="section3.html">Section 3</a></li>
+							<li><a href="section4.html">Section 4</a></li>
+							<li><a href="section5.html">Section 5</a></li>
+							<li><a href="section6.html">Section 6</a></li>
+						</ul>
+					</li>
+					<li class="dropdown">
+						<a href="javascript:;" class="dropdown-toggle">
 							<span class="micon bi bi-table"></span><span class="mtext">Tables</span>
 						</a>
 						<ul class="submenu">
@@ -255,20 +268,6 @@
 							<li><a href="sectionChart4.html">Section 4</a></li>
 							<li><a href="sectionChart5.html">Section 5</a></li>
 							<li><a href="sectionChart6.html">Section 6</a></li>
-						</ul>
-					</li>
-
-					<li class="dropdown">
-						<a href="javascript:;" class="dropdown-toggle">
-							<span class="micon bi bi-pie-chart"></span><span class="mtext">Charts</span>
-						</a>
-						<ul class="submenu">
-							<li><a href="section1.html">Section 1</a></li>
-							<li><a href="section2.html">Section 2</a></li>
-							<li><a href="section3.html">Section 3</a></li>
-							<li><a href="section4.html">Section 4</a></li>
-							<li><a href="section5.html">Section 5</a></li>
-							<li><a href="section6.html">Section 6</a></li>
 						</ul>
 					</li>
 					
