--- a/section1.html
+++ b/section1.html
@@ -854,7 +854,8 @@
 						<input class="form-control" type="text" placeholder=" " />
 					</div>
 
-                    <div>
+                    <div class="button">
+                        <a href="index.html"><button type="button" class="btn btn-primary">Back</button></a>
                         <a href="section2.html"><button type="button" class="btn btn-primary">Next</button></a>
 
 					</div>
