--- a/section6.html
+++ b/section6.html
@@ -405,8 +405,10 @@
                     </div>
 
                  
-					<div>
+					<div class="button">
+                        <a href="section5.html"><button type="button" class="btn btn-primary">Back</button></a>
                         <a href="preview.html"><button type="button" class="btn btn-primary">Preview</button></a>
+
 					</div>
 				</form>
                 
