--- a/index.html
+++ b/index.html
@@ -292,13 +292,10 @@
 					<div class="col-md-8">
 						<h4 class="font-20 weight-500 mb-10 text-capitalize">
 							Welcome back
-							<div class="weight-600 font-30 text-blue">Johnny Brown!</div>
+							<div class="weight-600 font-30 text-blue">Auditor's Name</div>
 						</h4>
 						<p class="font-18 max-width-600">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde
-							hic non repellendus debitis iure, doloremque assumenda. Autem
-							modi, corrupti, nobis ea iure fugiat, veniam non quaerat
-							mollitia animi error corporis.
+							This platform helps you easily record your audit findings, ensuring your inputs are saved. Good luck!
 						</p>
 					</div>
 				</div>
