--- a/introduction.html
+++ b/introduction.html
@@ -285,25 +285,7 @@
 
 	<div class="main-container">
 		<div class="xs-pd-20-10 pd-ltr-20">
-			<div class="card-box pd-20 height-100-p mb-30">
-				<div class="row align-items-center">
-					<div class="col-md-4">
-						<img src="vendors/images/banner-img.png" alt="" />
-					</div>
-					<div class="col-md-8">
-						<h4 class="font-20 weight-500 mb-10 text-capitalize">
-							Welcome back
-							<div class="weight-600 font-30 text-blue">Johnny Brown!</div>
-						</h4>
-						<p class="font-18 max-width-600">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde
-							hic non repellendus debitis iure, doloremque assumenda. Autem
-							modi, corrupti, nobis ea iure fugiat, veniam non quaerat
-							mollitia animi error corporis.
-						</p>
-					</div>
-				</div>
-			</div>
+			
 			<!-- horizontal Basic Forms Start -->
 			<div class="pd-20 card-box mb-30">
 				<div class="clearfix">
@@ -319,8 +301,8 @@
 						<input class="form-control" type="date" placeholder="" />
 					</div>
 					<div class="form-group">
-						<label>Safety audit report for Bank? </label>
-						<input class="form-control" value="" type="text" />
+						<label>Safety audit report for? </label>
+						<input class="form-control" value="" type="text" placeholder="Bank name" />
 					</div>
 					<div class="form-group">
 						<label>Bank full address </label>
@@ -371,10 +353,6 @@
 			<!-- horizontal Basic Forms Start -->
 			<div class="pd-20 card-box mb-30">
 				<div class="clearfix">
-					<div class="pull-left">
-						<h4 class="text-blue h4">Introductions</h4>
-						<p class="mb-30">Bank Safety Audit Portal</p>
-					</div>
 					
 				</div>
 				<form>
