--- a/section3.html
+++ b/section3.html
@@ -681,9 +681,11 @@
 
                           
 
-                            <div>
-                                <a href="section4.html"><button type="button" class="btn btn-primary">Next</button></a>
-                            </div>
+                            <div class="button">
+								<a href="section2.html"><button type="button" class="btn btn-primary">Back</button></a>
+								<a href="section4.html"><button type="button" class="btn btn-primary">Next</button></a>
+		
+							</div>
 
 				    </form>
                 </div>
