--- a/section4.html
+++ b/section4.html
@@ -343,8 +343,10 @@
                         </select>
                     </div>
 
-                    <div>
+                    <div class="button">
+                        <a href="section3.html"><button type="button" class="btn btn-primary">Back</button></a>
                         <a href="section5.html"><button type="button" class="btn btn-primary">Next</button></a>
+
 					</div>
 
 			
