--- a/section1.html
+++ b/section1.html
@@ -855,7 +855,7 @@
 					</div>
 
                     <div class="button">
-                        <a href="index.html"><button type="button" class="btn btn-primary">Back</button></a>
+                        <a href="introduction.html"><button type="button" class="btn btn-primary">Back</button></a>
                         <a href="section2.html"><button type="button" class="btn btn-primary">Next</button></a>
 
 					</div>
