--- a/profile.html
+++ b/profile.html
@@ -346,10 +346,7 @@
 										<span>Phone Number:</span>
 										619-229-0054
 									</li>
-									<li>
-										<span>Branch:</span>
-										Ikeja
-									</li>
+								
 									<li>
 										<span>Address:</span>
 										1807 Holden Street<br />
@@ -878,9 +875,9 @@
 																	type="text" />
 															</div>
 															<div class="form-group">
-																<label>Branch</label>
+																<label>Phone</label>
 																<input class="form-control form-control-lg"
-																	type="text" />
+																	type="number" />
 															</div>
 															<div class="form-group">
 																<label>Email</label>
