--- a/section6.html
+++ b/section6.html
@@ -299,7 +299,7 @@
 					</div>
 					 
 				</div>
-				<form>
+				<form  id="picture" class="Pictorial_evidence">
                     <div class="form-group">
                         <label>Poor housekeeping </label>
                         <div class="custom-file">
