--- a/section5.html
+++ b/section5.html
@@ -299,7 +299,7 @@
 					</div>
 					 
 				</div>
-				<form>
+				<form  id="Welfare" class="welfare_facilities">
                     <div class="form-group">
                         <label>Are male and female toilets provided? </label>
                         <select class="custom-select2 form-control" name="state" style="width: 100%; height: 38px">
