--- a/section4.html
+++ b/section4.html
@@ -301,7 +301,7 @@
 				<form id="handtools" class="work_equipment">
                     <div class="form-group">
                         <label>Were mechanical tools in good condition? </label>
-                        <select class="custom-select2 form-control" name="state" style="width: 100%; height: 38px">
+                        <select class="custom-select2 form-control" name="mechanical_tools_good_condition" style="width: 100%; height: 38px">
                                 <option value="">Select</option>
                                 <option value="All tools were good ">All tools were good </option>
                                 <option value="Some tools were bad ">Some tools were bad </option>
@@ -327,7 +327,7 @@
 					
                     <div class="form-group">
                         <label>During the audit, did you see any step ladders to assist in height elevation? </label>
-                        <select class="custom-select2 form-control" name="state" style="width: 100%; height: 38px">
+                        <select class="custom-select2 form-control" name=" step_ladders_ assist_height_elevation" style="width: 100%; height: 38px">
                                 <option value="">Select</option>
                                 <option value="Yes">Yes</option>
                                 <option value="No">No</option>
@@ -336,7 +336,7 @@
 
                     <div class="form-group">
                         <label>If yes, was it in a good condition?  </label>
-                        <select class="custom-select2 form-control" name="state" style="width: 100%; height: 38px">
+                        <select class="custom-select2 form-control" name=" good_condition" style="width: 100%; height: 38px">
                                 <option value="">Select</option>
                                 <option value="Yes">Yes</option>
                                 <option value="No">No</option>
