--- a/section5.html
+++ b/section5.html
@@ -302,7 +302,7 @@
 				<form  id="Welfare" class="welfare_facilities">
                     <div class="form-group">
                         <label>Are male and female toilets provided? </label>
-                        <select class="custom-select2 form-control" name="state" style="width: 100%; height: 38px">
+                        <select class="custom-select2 form-control" name=" male_female_toilets_provided" style="width: 100%; height: 38px">
                                 <option value="">Select</option>
                                 <option value="Yes">Yes</option>
                                 <option value="No">No</option>
@@ -311,7 +311,7 @@
 				
                     <div class="form-group">
                         <label>As at the audit, were toilets in good usable conditions?  </label>
-                        <select class="custom-select2 form-control" name="state" style="width: 100%; height: 38px">
+                        <select class="custom-select2 form-control" name="toilets_good_usable_conditions" style="width: 100%; height: 38px">
                                 <option value="">Select</option>
                                 <option value="Good ">Good </option>
                                 <option value="Fair ">Fair </option>
@@ -321,29 +321,29 @@
 
                     <div class="form-group">
                         <label>Are there adequate safety signs placed to differentiate male and female toilets?</label>
-                        <select class="custom-select2 form-control" name="state" style="width: 100%; height: 38px">
+                        <select class="custom-select2 form-control" name="safety_signs_placed_differentiate_male_female_toilets" style="width: 100%; height: 38px">
                                 <option value="">Select</option>
                                 <option value="Yes">Yes</option>
                                 <option value="No">No</option>
                         </select>
                         <label>If no, which of the toilets? </label>
-						<input class="form-control" type="text" placeholder="" />
+						<input class="form-control" name="if_no_which_toilet" type="text" placeholder="" />
                     </div>
 				
                     <div class="form-group">
                         <label>Is there any safety signage promoting personal hygiene in the toilet? </label>
-                        <select class="custom-select2 form-control" name="state" style="width: 100%; height: 38px">
+                        <select class="custom-select2 form-control" name="safety_signage_promoting_personal_hygiene_toilet" style="width: 100%; height: 38px">
                                 <option value="">Select</option>
                                 <option value="Yes">Yes</option>
                                 <option value="No">No</option>
                         </select>
                         <label>if yes, descirbe which sign</label>
-						<input class="form-control" type="text" placeholder="" />
+						<input class="form-control" name="descirbe_sign" type="text" placeholder="" />
                     </div>
 
                     <div class="form-group">
                         <label>Are workers provided with cloak rooms/lockers to keep personal belongings? </label>
-                        <select class="custom-select2 form-control" name="state" style="width: 100%; height: 38px">
+                        <select class="custom-select2 form-control" name="workers_provided_cloak-_rooms/lockers" style="width: 100%; height: 38px">
                                 <option value="">Select</option>
                                 <option value="Yes">Yes</option>
                                 <option value="No">No</option>
