--- a/section1.html
+++ b/section1.html
@@ -852,7 +852,7 @@
 
                     <div class="button">
                         <a href="introduction.html"><button type="button" class="btn btn-primary">Back</button></a>
-                        <a href="section2.html"><button type="button" class="btn btn-primary">Next</button></a>
+						<a href="section2.html" onclick="submit()"><button type="button" class="btn btn-primary">Next</button></a>
 
 					</div>
 
@@ -891,6 +891,18 @@
 	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NXZMQSS" height="0" width="0"
 			style="display: none; visibility: hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
+	<script src="form-request.js"></script>
+	<script>
+		function submit() {
+			getFormPayload().then((re) => {
+				save(re);
+			});
+		}
+
+		window.onload = function () {
+			setFormPayload();
+		}
+	</script>
 </body>
 
 </html>
