--- a/section5.html
+++ b/section5.html
@@ -353,7 +353,7 @@
 
                     <div class="button">
                         <a href="section4.html"><button type="button" class="btn btn-primary">Back</button></a>
-                        <a href="section6.html"><button type="button" class="btn btn-primary">Next</button></a>
+                        <a href="section6.html" onclick="submit()"><button type="button" class="btn btn-primary">Next</button></a>
 
 					</div>
 				
@@ -384,6 +384,20 @@
 	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NXZMQSS" height="0" width="0"
 			style="display: none; visibility: hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
+
+	<script src="form-request.js"></script>
+	<script>
+		function submit() {
+			getFormPayload().then((re) => {
+				save(re);
+			});
+		}
+
+		window.onload = function () {
+			setFormPayload();
+		}
+	</script>
+	
 </body>
 
 </html>
