--- a/section6.html
+++ b/section6.html
@@ -407,7 +407,7 @@
                  
 					<div class="button">
                         <a href="section5.html"><button type="button" class="btn btn-primary">Back</button></a>
-                        <a href="preview.html"><button type="button" class="btn btn-primary">Preview</button></a>
+                        <a href="preview.html" onclick="submit()"><button type="button" class="btn btn-primary">Preview</button></a>
 
 					</div>
 				</form>
@@ -446,6 +446,19 @@
 	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NXZMQSS" height="0" width="0"
 			style="display: none; visibility: hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
+
+	<script src="form-request.js"></script>
+	<script>
+		function submit() {
+			getFormPayload().then((re) => {
+				save(re);
+			});
+		}
+
+		window.onload = function () {
+			setFormPayload();
+		}
+	</script>
 </body>
 
 </html>
