Next and Previous data loaded successfully

--- a/introduction.html
+++ b/introduction.html
@@ -410,6 +410,7 @@
 	<!-- End Google Tag Manager (noscript) -->
 	<script src="form-request.js"></script>
 	<script>
+		//localStorage.clear();
 		function submit() {
 			getFormPayload().then((re) => {
 				save(re);
