--- a/section1.html
+++ b/section1.html
@@ -899,9 +899,9 @@
 			});
 		}
 
-		window.onload = function () {
+		window.addEventListener("load",function () {
 			setFormPayload();
-		}
+		})
 	</script>
 </body>
 
