--- a/section6.html
+++ b/section6.html
@@ -455,9 +455,9 @@
 			});
 		}
 
-		window.onload = function () {
+		window.addEventListener("load",function () {
 			setFormPayload();
-		}
+		})
 	</script>
 </body>
 
