--- a/introduction.html
+++ b/introduction.html
@@ -417,9 +417,9 @@
 			});
 		}
 
-		window.onload = function () {
+		window.addEventListener("load",function () {
 			setFormPayload();
-		}
+		})
 	</script>
 </body>
 
