--- a/section3.html
+++ b/section3.html
@@ -730,9 +730,9 @@
 			});
 		}
 
-		window.onload = function () {
+		window.addEventListener("load",function () {
 			setFormPayload();
-		}
+		})
 	</script>
 </body>
 
