--- a/section4.html
+++ b/section4.html
@@ -385,9 +385,9 @@
 			});
 		}
 
-		window.onload = function () {
+		window.addEventListener("load",function () {
 			setFormPayload();
-		}
+		})
 	</script>
 </body>
 
