--- a/section5.html
+++ b/section5.html
@@ -393,11 +393,11 @@
 			});
 		}
 
-		window.onload = function () {
+		window.addEventListener("load",function () {
 			setFormPayload();
-		}
+		})
 	</script>
-	
+
 </body>
 
 </html>
