Select option values to fileld modified

--- a/section4.html
+++ b/section4.html
@@ -327,7 +327,8 @@
 					
                     <div class="form-group">
                         <label>During the audit, did you see any step ladders to assist in height elevation? </label>
-                        <select class="custom-select2 form-control" name="step_ladders_ assist_height_elevation" style="width: 100%; height: 38px">
+						<select class="custom-select2 form-control" name="step_ladders_assist_height_elevation"
+							style="width: 100%; height: 38px">
                                 <option value="">Select</option>
                                 <option value="Yes">Yes</option>
                                 <option value="No">No</option>
