--- a/index.html
+++ b/index.html
@@ -538,6 +538,12 @@
 	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NXZMQSS" height="0" width="0"
 			style="display: none; visibility: hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
+<script>
+
+	window.addEventListener("load", function () {
+		localStorage.setItem("formRequestPayload", '{}');
+	})
+</script>
 </body>
 
 </html>
