--- a/preview.html
+++ b/preview.html
@@ -2005,7 +2005,7 @@
 							 
 								<div class="button">
 									<a href="section5.html"><button type="button" class="btn btn-primary">Back</button></a>
-									<a href="preview.html" onclick="submit()"><button type="button" class="btn btn-primary">Preview</button></a>
+									<a href="preview.html" onclick="submit()"><button type="button" class="btn btn-primary">Submit</button></a>
 			
 								</div>
 							</form>
