--- a/section6.html
+++ b/section6.html
@@ -406,9 +406,7 @@
 
                  
 					<div class="button">
-                        <a href="section5.html"><button type="button" class="btn btn-primary">Back</button></a>
-                        <a href="preview.html" onclick="submit()"><button type="button" class="btn btn-primary">Preview</button></a>
-
+						<a class="btn btn-primary" onclick="submit()" style="color: #fff;cursor: pointer;">Submit</a>
 					</div>
 				</form>
                 
