--- a/section3.html
+++ b/section3.html
@@ -308,7 +308,7 @@
                                 <option value="Bad">Bad</option>
                         </select>
                         <label>if bad, where?	 </label>
-						<input class="form-control" type="text" placeholder="" />
+						<input class="form-control" name="How_general_house_keeping_bank_if_bad_where" type="text" placeholder="" />
                     </div>
 
                     <div class="form-group">
@@ -319,7 +319,7 @@
                                 <option value="No">No</option>
                         </select>
                         <label>if no, where? </label>
-						<input class="form-control" type="text" placeholder="" />
+						<input class="form-control" name="if_no_where" type="text" placeholder="" />
                     </div>
 
                     <div class="form-group">
