--- a/section2.html
+++ b/section2.html
@@ -454,7 +454,7 @@
                                 <option value="No">No</option>
                         </select>
                         <label>if no, where is it placed on the floor? </label>
-						<input class="form-control" name=" where_placed_floor" type="text" placeholder="" />
+						<input class="form-control" name="fire_extinguishers_hung_wall_if_no" type="text" placeholder="" />
                     </div>
 
 					<div class="form-group">
@@ -465,7 +465,7 @@
                                 <option value="No">No</option>
                         </select>
                         <label>if no, where is the fire extinguisher obstructed? </label>
-						<input class="form-control" name="where_fire_extinguisher_obstructed" type="text" placeholder="" />
+						<input class="form-control" name="free_obstruction_if_no" type="text" placeholder="" />
                     </div>
 					
 				
