Name of each from field updated

--- a/section5.html
+++ b/section5.html
@@ -327,7 +327,8 @@
                                 <option value="No">No</option>
                         </select>
                         <label>If no, which of the toilets? </label>
-						<input class="form-control" name="if_no_which_toilet" type="text" placeholder="" />
+						<input class="form-control" name="safety_signs_placed_differentiate_male_female_toilets_if_no" type="text"
+							placeholder="" />
                     </div>
 				
                     <div class="form-group">
@@ -338,7 +339,7 @@
                                 <option value="No">No</option>
                         </select>
                         <label>if yes, descirbe which sign</label>
-						<input class="form-control" name="descirbe_sign" type="text" placeholder="" />
+						<input class="form-control" name="safety_signage_promoting_personal_hygiene_toilet_if_yes" type="text" placeholder="" />
                     </div>
 
                     <div class="form-group">
